--- a/env-app.yml
+++ b/env-app.yml
@@ -109,6 +109,7 @@ dependencies:
     - matplotlib==3.6.3
     - matplotlib-inline==0.1.6
     - mdurl==0.1.2
+    - more_itertools==10.1.0
     - MiniSom==2.2.9
     - mistune==2.0.4
     - mlflow==2.1.1
